--- a/style.css
+++ b/style.css
@@ -16,10 +16,19 @@ section {
     padding: 3rem
 }
 
-/**/
+
+/*NAVBAR*/
+
+.navbar {
+    text-transform: uppercase;
+    background-color: rgba(49, 24, 131, .9) !important;
+    border-color: rgba(49, 24, 131, .9);
+}
+
+/*HERO*/
 .hero {
     width: 100%;
-    height: 50vh;
+    height: 70vh;
     background: linear-gradient(135deg, rgba(49, 24, 131, .9) 0%, rgba(72, 56, 149, .8) 100%), url('img/neonbrand.jpg') center no-repeat;
     background-size: cover;
     position: relative;
@@ -46,7 +55,7 @@ section {
 }
 
 .btn {
-    background-color: #eb648c;
+    background-color: rgba(49, 24, 131);
     border-radius: 2rem;
     color: #fafafa;
     display: inline-block;
@@ -57,7 +66,9 @@ section {
 }
 
 .btn:hover {
-    background-color: #ce587b;
+    background-color: rgba(55, 8, 209, 0.9);
+        color: #fafafa;
+
 }
 
 
@@ -108,4 +119,11 @@ section {
 .tab-content{
     margin-bottom: 5%;
     transition: all 400ms ease;
+}
+
+/*NAVIGATION TABS: WHY b2B and HOW IT WORKS*/
+
+.tabnav {
+    font-size: 2rem;
+    justify-content: space-around;
 }
