--- a/style.css
+++ b/style.css
@@ -63,11 +63,22 @@ section {
     padding: 1rem 3rem;
 }
 
+@media only screen and (max-width: 700px) {
+    section {
+        padding: 1rem .5rem;
+    }
+    
+    .center-content .form-container {
+        padding: .5rem;
+    }
+    
+}
+
 /* ------------ */
 /* NAVBAR */
 
 .navbar {
-    text-transform: uppercase;
+    /*text-transform: uppercase;*/
     background-color: rgba(61, 90, 254, .9) !important;
     border-color: rgba(61, 90, 254, .9);
 }
@@ -187,7 +198,7 @@ section {
 
 #cta {
     background-image: var(--background-color);
-    height: 990px;
+    height: 850px;
 }
 
 .cta-text {
